# drm-hwcomposer

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  1  Android.bp  Makefile  README.md  meson.build
.ci/: .gitlab-ci-checkcommit.sh  Dockerfile  Makefile
.ci/android_headers/hardware/: hwcomposer2.h
.ci/container/: .gitlab-ci.yml
.ci/container/ubuntu/: x86_64_aospless.sh
backend/: Backend.cpp  Backend.h  BackendManager.cpp  BackendManager.h  VirtualBackend.cpp  VirtualBackend.h
bufferinfo/: BufferInfo.h  BufferInfoGetter.cpp  BufferInfoMapperMetadata.cpp  BufferInfoMapperMetadata.h  meson.build
bufferinfo/legacy/: BufferInfoImagination.cpp  BufferInfoLibdrm.cpp  BufferInfoMaliHisi.cpp  BufferInfoMaliMediatek.cpp  BufferInfoMaliMeson.cpp  BufferInfoMinigbm.cpp  BufferInfoMinigbm.h
compositor/: ColorInfo.h  DisplayInfo.h  DrmKmsPlan.cpp  DrmKmsPlan.h  FlatteningController.cpp  FlatteningController.h  LayerData.h
drm/: DrmAtomicStateManager.cpp  DrmAtomicStateManager.h  DrmConnector.cpp  DrmConnector.h  DrmCrtc.cpp  DrmCrtc.h  DrmDevice.cpp  DrmDevice.h  DrmDisplayPipeline.cpp  DrmDisplayPipeline.h  DrmEncoder.cpp  DrmEncoder.h  DrmFbImporter.cpp  DrmFbImporter.h  DrmHwc.cpp  DrmHwc.h  DrmMode.cpp  DrmMode.h  DrmPlane.cpp  DrmPlane.h  DrmProperty.cpp  DrmProperty.h  DrmVirtgpu.h  ResourceManager.cpp  ResourceManager.h  UEventListener.cpp  UEventListener.h  VSyncWorker.cpp  VSyncWorker.h  meson.build
gl/: GLRenderer.cpp  GLRenderer.h
gralloc/: GrallocBufferHandler.cpp  GrallocBufferHandler.h
gralloc1/: gralloc1bufferhandler.cpp  gralloc1bufferhandler.h
hwc2_device/: DrmHwcTwo.cpp  DrmHwcTwo.h  HwcDisplay.cpp  HwcDisplay.h  HwcDisplayConfigs.cpp  HwcDisplayConfigs.h  HwcLayer.cpp  HwcLayer.h  VirtualDisplay.cpp  VirtualDisplay.h  callstack.cpp  callstack.h  hwc2_device.cpp  hwcservice.cpp  hwcservice.h  hwcservice_lib.cpp  hwcservice_lib.h  meson.build
hwc3/: CommandResultWriter.h  Composer.cpp  Composer.h  ComposerClient.cpp  ComposerClient.h  ComposerResources.cpp  ComposerResources.h  DrmHwcThree.cpp  DrmHwcThree.h  Utils.cpp  Utils.h  hwc3-apex-file-contexts  hwc3-drm.rc  hwc3-drm.xml  meson.build  service.cpp
hwc3-server/default/: Android.bp  Composer.h  ComposerClient.cpp  ComposerClient.h  ComposerCommandEngine.cpp  ComposerCommandEngine.h  android.hardware.graphics.composer3-service.intel.rc  service.cpp
hwc3-server/default/impl/: HalImpl.cpp  HalImpl.h  HwcLoader.cpp  HwcLoader.h  ResourceManager.cpp
hwc3-server/default/include/: IComposerHal.h
hwc3-service/default/: Android.bp  Android.mk  service.cpp
hwc3-service/default/impl/: HalImpl.cpp  TranslateHwcAidl.h
include/: nativebufferhandler.h
libhwcservice/: .hwcserviceapi.cpp.swp  Android.bp  callstack1.cpp  callstack1.h  hwcserviceapi.cpp  hwcserviceapi.h  hwcservicehelper.h  icontrols.cpp  icontrols.h  idiagnostic.cpp  idiagnostic.h  idisplayoverscancontrol.h  idisplayscalingcontrol.h  iservice.cpp  iservice.h
libhwcservice/test/: Android.mk  hwcservice_test.cpp
tests/: Android.bp  make.sh  makefile  prebuild.sh  standalone_display_stress_test.cpp  standalone_display_test.cpp  uevent_print.cpp
tests/diff/: Android.bp.diff  elfutils.diff  igt-gpu-tools.diff  kmod.diff
tests/linux/: BufferInfoGetterLinux.cpp  DrmAtomicStateManagerLinux.cpp  DrmFbImporterLinux.cpp  DrmPlaneLinux.cpp  HwcLayerLinux.cpp  ResourceManagerLinux.cpp  config.h  igt_assist.c  igt_assist.h  test_main.cpp
tests/test_include/: gralloc_helper.h
utils/: EdidWrapper.h  LibdisplayEdidWrapper.cpp  UEvent.h  UniqueFd.h  UniqueFd2.h  Worker.cpp  cta_hdr_defs.h  drm_hdr_defs.h  fd.cpp  fd.h  hdr_metadata_defs.h  hwc3.h  hwcdefs.h  hwcrect.h  intel_blit.cpp  intel_blit.h  log.h  properties.cpp  properties.h  spinlock.h  thread_annotations.h  utils_android.h
va/: varenderer.cpp  varenderer.h  vautils.cpp  vautils.h
