src_common += files(
    'DrmAtomicStateManager.cpp',
    'DrmConnector.cpp',
    'DrmCrtc.cpp',
    'DrmDevice.cpp',
    'DrmDisplayPipeline.cpp',
    'DrmEncoder.cpp',
    'DrmFbImporter.cpp',
    'DrmHwc.cpp',
    'DrmMode.cpp',
    'DrmPlane.cpp',
    'DrmProperty.cpp',
    'ResourceManager.cpp',
    'UEventListener.cpp',
    'VSyncWorker.cpp',
)
